--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content">
 
             <EditText
+                android:id="@+id/todo_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title"
@@ -40,8 +41,8 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-                <EditText
-                    android:id="@+id/input_date"
+                <TextView
+                    android:id="@+id/date_textview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/date" />
@@ -70,8 +71,8 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-                <EditText
-                    android:id="@+id/input_time"
+                <TextView
+                    android:id="@+id/time_textview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/time" />
