--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -38,7 +38,8 @@
             app:layout_constraintTop_toBottomOf="@+id/textTitle"
             android:id="@+id/imageView"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/textDueDate"
@@ -54,7 +55,8 @@
             app:layout_constraintTop_toBottomOf="@+id/textTitle"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp" />
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="8dp" />
 
         <ImageButton
             android:id="@+id/btn_delete"
