--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,13 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.c3cyberclub.p5_todoapp.MainActivity">
     <item
+        android:id="@+id/menu_item_share"
+        android:showAsAction="always"
+        android:title="@string/share"
+        android:actionProviderClass=
+            "android.widget.ShareActionProvider"
+        tools:ignore="AppCompatResource" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
